--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "buble": "0.19.3",
+    "chai": "4.2.0",
+    "enzyme": "3.7.0",
     "husky": "1.1.2",
     "lint-staged": "7.3.0",
+    "mocha": "5.2.0",
     "prettier": "1.14.3",
     "react-styleguidist": "7.3.10",
     "webpack": "3.8.1"
