Add testing modules and component generator script

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
 	"plugins": [
+		"root-import",
 		"transform-class-properties",
+		"transform-es2015-destructuring",
 		"transform-object-rest-spread"
 	],
   "presets": ["env", "react"]
