Add current commands and configuration to main README

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
 	"plugins": [
-		"root-import",
+		["babel-plugin-root-import", {
+      "rootPathSuffix": "."
+    }],
 		"transform-class-properties",
 		"transform-es2015-destructuring",
 		"transform-object-rest-spread"
