--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,21 +1,23 @@
 {
+  extends: 'stylelint-config-recommended',
   plugins: [
-    'stylelint-scss',
+    'stylelint-order',
+    'stylelint-scss'
   ],
   defaultSeverity: 'error',
   rules: {
+    'at-rule-blacklist': ['extend'],
     'max-nesting-depth': [4, { ignore: ['blockless-at-rules'] }],
-    'declaration-block-no-duplicate-properties': true,
     'selector-max-id': 0,
+    'selector-class-pattern': ['[a-z]+', { resolveNestedSelectors: true }],
     'declaration-no-important': [true, { severity: 'error' }],
     'property-no-vendor-prefix': true,
     'selector-no-vendor-prefix': true,
     'value-no-vendor-prefix': true,
     'function-url-quotes': 'always',
     'length-zero-no-unit': true,
-    'selector-pseudo-class-no-unknown': true,
-    'selector-pseudo-element-no-unknown': true,
-    'selector-pseudo-element-colon-notation': 'double',
+    'selector-pseudo-element-colon-notation': 'single',
+    'order/properties-alphabetical-order': true,
     'scss/at-rule-no-unknown': true,
     'scss/selector-no-redundant-nesting-selector': true
   }
