--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "React components for the Perksy web app",
   "main": "index.js",
   "scripts": {
-    "precommit": "lint-staged",
     "build": "styleguidist build",
     "dev": "styleguidist server",
     "gen": "./scripts/component-generator.sh",
@@ -71,7 +70,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run test:coverage"
     }
   },
   "lint-staged": {
